# metagraphRF

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
src/: prelude.h  pybindings.cpp
src/metagraphRF/: __init__.py  aligner.py
