[project]
name = "metagraphRF"
version = "0.1.0.dev1"
description = "Readfish-compatible Metagraph wrapper"
authors = [
    { name="Sayan Goswami", email="sgoswami@grlab.org" }
]
dependencies = [
    "git+https://github.com/ratschlab/metagraph.git@main#subdirectory=metagraph/api/python"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"